--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ layout: default
   {% include education.html %}
 {% endunless %}
 
+{% include grants.html %}
+
 {% include experiences.html %}
 
 {% include projects.html %}
